<resources>
    <string name="app_name">E_Commerce</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="hint_name">Nama</string>
    <string name="hint_phone">Nomor HP</string>
    <string name="hint_address">Alamat</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Konfirmasi Password</string>
    <string name="btn_register">Daftar</string>

    <string name="login_as_admin">Login sebagai Admin</string>

    <string name="welcome_message">Selamat Datang, %1$s!</string>
    <string name="nav_product">Produk</string>
    <string name="nav_keranjang">Keranjang</string>
    <string name="nav_checkout">Checkout</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_halaman_admin">Halaman Admin</string>
    <string name="nav_dompet_saya">Dompet Saya</string>

    <string name="nav_keranjang_menu">Keranjang</string>
    <string name="nav_checkout_menu">Checkout</string>
    <string name="nav_profile_menu">Profil</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_home">Home</string>

    <string name="nav_product_list">Product List</string>
    <string name="nav_add_product">Add Product</string>
    <string name="nav_manage_users">Manage Users</string>
    <string name="welcome_admin">Welcome Admin</string>

    <string name="nav_admin_name">Admin</string>
    <string name="nav_admin_photo">Foto Admin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_description">Deskripsi Produk</string>
    <string name="hint_price">Harga</string>
    <string name="hint_old_price">Harga Lama (opsional)</string>
    <string name="hint_category">Kategori</string>
    <string name="hint_image_url">URL Gambar (opsional)</string>
    <string name="btn_add_product">Tambah Produk</string>
    <string name="btn_choose_image">Pilih Gambar</string>
    <string name="btn_save_product_prompt">Apakah Anda ingin menyimpan Produk</string>
    <string name="btn_save_product">Simpan Produk</string>
    <string name="desc_image_preview">Pratinjau Gambar</string>

    <string name="btn_update_product">Update Produk</string>
    <string name="nav_edit_product">Edit Produk</string>

    <string name="nav_admin_product_list">Daftar Produk</string>
    <string name="product_list">Daftar Produk</string>


    <string name="edit_product">Tombol edit produk</string>
    <string name="delete_product">Tombol hapus produk</string>
    <string name="product_image">Gambar Produk</string>
    <string name="product_name_placeholder">Nama Produk</string>
    <string name="edit">Edit</string>
    <string name="delete">Hapus</string>
    <string name="product_price_placeholder">Rp 0</string>

    <string name="nav_admin_manage_users">Manage Users</string>

    <string name="user_name">User Name</string>
    <string name="user_email">email@example.com</string>
    <string name="user_role">Role</string>
    <string name="delete_user">Delete User</string>


    <string name="nav_admin_add_product">Add Product</string>
    <string name="nav_cart">My Cart</string>
    <string name="btn_choose_new_image">Choose New Image</string>
</resources>