<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_product_list"
            android:icon="@drawable/ic_product_list"
            android:title="@string/nav_admin_product_list"/>
        <item
            android:id="@+id/nav_admin_add_product"
            android:icon="@drawable/ic_add_product"
            android:title="@string/nav_admin_add_product"/>
        <item
            android:id="@+id/nav_admin_manage_users"
            android:icon="@drawable/ic_admin"
            android:title="@string/nav_admin_manage_users"/>
    </group>

    <item android:title="Aksi Lain">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout"/>
        </menu>
    </item>
</menu>